--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     <button onclick="calculateMortonCode()">Berechnen</button>
 
     <div id="result" class="result hidden"></div>
+    <div id="result" class="result hidden"></div>
 </div>
 
 <script src="script.js"></script>
