display result of both methods; fix interleave for loop

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 
     <button onclick="calculateMortonCode()">Berechnen</button>
 
-    <div id="result" class="result hidden"></div>
-    <div id="result" class="result hidden"></div>
+    <div id="result1" class="result hidden"></div>
+    <div id="result2" class="result hidden"></div>
 </div>
 
 <script src="script.js"></script>
