--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <input type="number" id="y" placeholder="Wert für y">
         
         <div id="zInput" class="hidden">
-            <label for="z">z-Koordinate:</label>
+            <label for="z" id="zLabel">z-Koordinate:</label>
             <input type="number" id="z" placeholder="Wert für z">
         </div>
     </div>
