animation for interleaving with for loop

--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
 
     <div id="result1" class="result hidden"></div>
     <div id="result2" class="result hidden"></div>
+
+    <div id="interleaveSteps" class="steps-container"></div>
+   
 </div>
 
 <script src="script.js"></script>
