displaying coordinates in binary

--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Morton-Code-Berechner</title>
+    <title>Morton Codes / Z-Order</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<h2>Morton-Code-Berechner</h2>
+<h2>Morton Codes / Z-Order</h2>
 
 <div class="container">
     <div class="select-group">
-        <label for="bitLength">Bitlänge:</label>
+        <label for="bitLength">bit length:</label>
         <select id="bitLength" onchange="displayMaxCoord()">
-            <option value="" disabled selected>Wählen Sie die Bitlänge</option>
+            <option value="" disabled selected>select</option>
             <option value="16">16</option>
             <option value="32">32</option>
             <option value="64">64</option>
@@ -23,16 +23,18 @@
     </div>
     
     <div class="select-group">
-        <label for="dimension">Dimension:</label>
+        <label for="dimension">dimension:</label>
         <select id="dimension" onchange="toggleCoordinateFields(); displayMaxCoord();">
-            <option value="2">2D (x, y)</option>
-            <option value="3">3D (x, y, z)</option>
+            <option value="" disabled selected>select</option>
+            <option value="2">2D</option>
+            <option value="3">3D</option>
         </select>
     </div>
     
     <div class="select-group">
-        <label for="layout">Layout:</label>
+        <label for="layout"  id="layoutLabel" class="hidden">layout:</label>
         <select id="layout" class="hidden" onchange="toggleCoordinateFields();">
+            <option value="" disabled selected>select</option>
             <option value="xyz">x, y, z</option>
             <option value="zyx">z, y, x</option>
         </select>
@@ -55,7 +57,7 @@
 
     <div id="result1" class="result hidden"></div>
     <div id="result2" class="result hidden"></div>
-
+    <div id="binaryCoordinates" class="binary-coordinates"></div>
     <div id="interleaveSteps" class="steps-container"></div>
    
 </div>
