--- a/index.html
+++ b/index.html
@@ -36,39 +36,44 @@
             <div class="select-group">
                 <label for="layout" id="layoutLabel">layout:</label>
                 <select id="layout" onchange="toggleCoordinateFields();">
-                    <option value="" disabled selected>select</option>
+                    <option value="xyz" disabled selected>select</option>
                     <option value="xyz">x, y, z</option>
                     <option value="zyx">z, y, x</option>
                 </select>
             </div>            
         </div>
 
-        <div class="DisplayMaxCoord">
+        <div class="displayMaxCoord">
             <div id="maxCoord">Maximum Coordinate Value: </div>
         </div>
 
-        <div id="pointA">
-            <div id="coordinateInputs">
-                <label for="x">x:</label>
-                <input type="number" id="x">
-
-                <label for="y">y:</label>
-                <input type="number" id="y">
-
-                <div id="zInput" class="hidden">
-                    <label for="z" id="zLabel">z:</label>
-                    <input type="number" id="z">
-                </div>
-
-                <div id="calculateButton">
-                    <button onclick="calculateMortonCode()">calculate</button>
+        <div class="pointA">
+            <div class="input-section">
+                <span class="label">a:</span>
+                <div id="coordinateInputs">
+                    <label for="x">x:</label>
+                    <input type="number" id="x">
+                    <label for="y">y:</label>
+                    <input type="number" id="y">
+                    <div id="zInput" class="hidden">
+                        <label for="z" id="zLabel">z:</label>
+                        <input type="number" id="z">
+                    </div>
+                    <div id="calculateButton">
+                        <button onclick="calculateMortonCode()">calculate</button>
+                    </div>
                 </div>
             </div>
-            <div id="result1" class="result hidden"></div>
-            <div id="result2" class="result hidden"></div>
-            <div id="binaryCoordinates" class="binary-coordinates"></div>
-            <div id="interleaveSteps" class="steps-container"></div>
+            <hr class="separator-line">
+            <div class="output-section">
+                <div id="result1" class="result"></div>
+                <div id="binaryCoordinates" class="binary-coordinates"></div><br>
+                <div id="interleaveSteps" class="steps-container"></div>
+                <div class="output-divider"></div>
+                <div id="result2" class="result"></div>
+            </div>
         </div>
+        
 
     </div>
 
