fixed output section for point a

--- a/index.html
+++ b/index.html
@@ -65,13 +65,16 @@
                 </div>
             </div>
             <hr class="separator-line">
-            <div class="output-section">
-                <div id="result1" class="result"></div>
-                <div id="binaryCoordinates" class="binary-coordinates"></div><br>
-                <div class="output-divider"></div>
-                <div id="result2" class="result"></div>
-            </div>
-            <div id="interleaveSteps" class="steps-container"></div>
+            <div class="output">
+                <div class="output-section">
+                  <div id="result1" class="result"></div>
+                  <div id="binaryCoordinates" class="binary-coordinates"></div>
+                  <div id="interleaveSteps" class="steps-container"></div>
+                </div>
+                <div class="output-section">
+                  <div id="result2" class="result"></div>
+                </div>
+              </div>              
         </div>
     </div>
 
