--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <option value="xyz">x, y, z</option>
                     <option value="zyx">z, y, x</option>
                 </select>
-            </div>            
+            </div>
         </div>
 
         <div class="displayMaxCoord">
@@ -67,14 +67,18 @@
             <hr class="separator-line">
             <div class="output">
                 <div class="output-section">
-                  <div id="result1" class="result"></div>
-                  <div id="binaryCoordinates" class="binary-coordinates"></div>
-                  <div id="interleaveSteps" class="steps-container"></div>
+                    <div class="labels">
+                        <p id="coordinateLabels">x:<br>y:<br><span id="zLabel"></span>morton-code:</p>
+                    </div>
+                    <div class="result-section">
+                        <div id="binaryCoordinates" class="binary-coordinates"></div>
+                        <div id="interleaveSteps" class="steps-container"></div>
+                    </div>
                 </div>
                 <div class="output-section">
-                  <div id="result2" class="result"></div>
+                    <div id="result2" class="result"></div>
                 </div>
-              </div>              
+            </div>
         </div>
     </div>
 
