steps für magicbits algorithmus

--- a/index.html
+++ b/index.html
@@ -83,12 +83,13 @@
                     </div>
 
                     <div id="result1" class="result">for-loop</div>
-                    
+
                 </div>
                 
                 <!-- Magic Bits -->
                 <div class="output-section">
                     <div id="result2" class="result">magic bits</div>
+                    <div id="steps" class="result"></div>
                 </div>
             </div>
         </div>
