code clean up and small bugfixes

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 
                 <!-- Magic Bits -->
                 <div class="output-section">
-                    <div id="result2" class="result">magic bits</div>
+                    <!--<div id="result2" class="result">magic bits</div>-->
                     <div id="steps" class="result"></div>
                 </div>
             </div>
