colorizing magic bit method calculation steps

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="output">
                 <!-- For-Loop -->
                 <div class="output-section">
-                    
+                    <h3>For-Loop</h3>
                     <div class="animation-section">
                         <div class="labels">
                             <p id="coordinateLabels"></p>
@@ -82,12 +82,13 @@
                         </div>
                     </div>
 
-                    <div id="result1" class="result">for-loop</div>
+                    <div id="result1" class="result"></div>
 
                 </div>
                 
                 <!-- Magic Bits -->
                 <div class="output-section">
+                    <h3>Magic-Bits</h3>
                     <!--<div id="result2" class="result">magic bits</div>-->
                     <div id="steps" class="result"></div>
                 </div>
