--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
         <!-- Maximum Coordinate Display -->
         <div class="displayMaxCoord">
             <div id="maxCoord">Maximum Coordinate Value: </div>
+            <div id="coordError" class="coordError"></div> <!-- Fehlernachricht -->
         </div>
+
 
         <!-- Input Section for Coordinates -->
         <div class="pointA">
@@ -72,24 +74,12 @@
                 <!-- For-Loop -->
                 <div class="output-section">
                     <h3>For-Loop</h3>
-                    <div class="animation-section">
-                        <div class="labels">
-                            <p id="coordinateLabels"></p>
-                        </div>
-                        <div class="result-section">
-                            <div id="binaryCoordinates" class="binary-coordinates"></div>
-                            <div id="interleaveSteps" class="steps-container"></div>
-                        </div>
-                    </div>
-
                     <div id="result1" class="result"></div>
-
                 </div>
                 
                 <!-- Magic Bits -->
                 <div class="output-section">
                     <h3>Magic-Bits</h3>
-                    <!--<div id="result2" class="result">magic bits</div>-->
                     <div id="steps" class="result"></div>
                 </div>
             </div>
