red border highlighting for invalid coordinate inputs

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
             <div class="select-group">
                 <label for="layout" id="layoutLabel">layout:</label>
-                <select id="layout" onchange="toggleCoordinateFields();">
+                <select id="layout" onchange="toggleCoordinateFields(); displayMaxCoord();">
                     <option value="xyz" disabled selected>select</option>
                     <option value="xyz">x, y, z</option>
                     <option value="zyx">z, y, x</option>
