code cleanup, working on for loop results design, not done yet

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <!-- For-Loop -->
                 <div class="output-section">
                     <h3>For-Loop</h3>
-                    <div id="result1" class="result"></div>
+                    <div id="resultForLoop" class="resultForLoop"></div>
                 </div>
                 
                 <!-- Magic Bits -->
