source code syntax highlighting

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Morton Codes / Z-Order</title>
+    <link rel="stylesheet" href="prism.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -78,7 +79,7 @@
                         <h3>For-Loop</h3>
                         <button id="show-code-btn" class="show-code-btn"
                             onclick="toggleCode('magicBitsCodeContainer', 'magicBitsHeader', 'show-code-btn', 'steps', forLoopCode)">View
-                            Code</button>
+                            Source Code</button>
                     </div>
                     <div id="resultForLoop" class="resultForLoop"></div>
                 </div>
@@ -90,7 +91,7 @@
                         <h3>Magic-Bits</h3>
                         <button id="show-code-btn2" class="show-code-btn"
                             onclick="toggleCode('forLoopCodeContainer', 'forLoopHeader','show-code-btn2','resultForLoop', magicBitsCode)">View
-                            Code</button>
+                            Source Code</button>
                     </div>
 
                     <div id="steps" class="result"></div>
@@ -100,8 +101,9 @@
     </div>
     </div>
 
+    <script src="prism.js"></script>
     <script src="script.js"></script>
-    
+   
 </body>
 
 </html>
