adjusting calculation steps to coordinate layout

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <div class="output-section">
                     <div id="forLoopCodeContainer" class="hidden code-container"></div>
                     <div id="forLoopHeader" class="header-section">
-                        <h3>For-Loop</h3>
+                        <h3>method: for loop</h3>
                         <button id="show-code-btn" class="show-code-btn"
                             onclick="toggleCode('magicBitsCodeContainer', 'magicBitsHeader', 'show-code-btn', 'steps', forLoopCode)">View
                             Source Code</button>
@@ -88,7 +88,7 @@
                 <div class="output-section">
                     <div id="magicBitsCodeContainer" class="hidden code-container"></div>
                     <div id="magicBitsHeader" class="header-section">
-                        <h3>Magic-Bits</h3>
+                        <h3>method: magic bits</h3>
                         <button id="show-code-btn2" class="show-code-btn"
                             onclick="toggleCode('forLoopCodeContainer', 'forLoopHeader','show-code-btn2','resultForLoop', magicBitsCode)">View
                             Source Code</button>
