small design changes

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <!-------------------------------------------------------------- Point A --------------------------------------------------------------->
 
         <!-- Input Section for Coordinates -->
-        <div id="pointA" class="pointA">
+        <div id="point-a" class="point">
             <div class="input-section">
                 <span class="label">a:</span>
                 <div id="a-coordinateInputs" class="coordinateInputs">
@@ -78,7 +78,7 @@
                     <div id="a-forLoopHeader" class="header-section">
                         <h3>method: for loop</h3>
                         <button id="a-show-code-btn" class="show-code-btn"
-                            onclick="toggleCode('a-magicBitsCodeContainer', 'a-magicBitsHeader', 'a-show-code-btn', 'a-steps', forLoopCode)">View
+                            onclick="toggleCode('a-magicBitsCodeContainer', 'a-magicBitsHeader', 'a-show-code-btn', 'a-resultMagicBits', forLoopCode)">View
                             Source Code</button>
                     </div>
                     <div id="a-resultForLoop" class="resultForLoop"></div>
@@ -94,12 +94,12 @@
                             Source Code</button>
                     </div>
 
-                    <div id="a-steps" class="result"></div>
+                    <div id="a-resultMagicBits" class="result"></div>
                 </div>
             </div>
         </div>
 <!-------------------------------------------------------------- Point B --------------------------------------------------------------->
-        <div class="pointB">
+        <div id="point-b" class="point">
             <div class="input-section">
                 <span class="label">b:</span>
                 <div id="b-coordinateInputs" class="coordinateInputs">
@@ -125,7 +125,7 @@
                     <div id="b-forLoopHeader" class="header-section">
                         <h3>method: for loop</h3>
                         <button id="b-show-code-btn" class="show-code-btn"
-                            onclick="toggleCode('b-magicBitsCodeContainer', 'b-magicBitsHeader', 'b-show-code-btn', 'b-steps', forLoopCode)">View
+                            onclick="toggleCode('b-magicBitsCodeContainer', 'b-magicBitsHeader', 'b-show-code-btn', 'b-resultMagicBits', forLoopCode)">View
                             Source Code</button>
                     </div>
                     <div id="b-resultForLoop" class="resultForLoop"></div>
@@ -141,7 +141,7 @@
                             Source Code</button>
                     </div>
 
-                    <div id="b-steps" class="result"></div>
+                    <div id="b-resultMagicBits" class="result"></div>
                 </div>
             </div>
         </div>
