--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <h2>Morton Codes / Z-Order</h2>
 
     <div class="container">
-        <!-- Settings Section -->
         <div class="settings">
             <div class="select-group">
                 <label for="bitLength">bit length:</label>
@@ -41,10 +40,9 @@
             </div>
         </div>
 
-        <!-- Maximum Coordinate Display -->
         <div class="displayMaxCoord">
             <div id="maxCoord">Maximum Coordinate Value: </div>
-            <div id="coordError" class="coordError"></div> <!-- Fehlernachricht -->
+            <div id="coordError" class="coordError"></div> 
         </div>
 
         <body onload="displayMaxCoord()">
@@ -171,8 +169,6 @@
                 <div id="resultSubtraction" class="resultArithmetic"></div>
             </div>
         </div>
-
-
     </div>
 
     <script src="prism.js"></script>
