--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
             <div class="output">
                 <!-- For-Loop -->
                 <div class="output-section">
-                    <div id="a-forLoopCodeContainer" class="hidden code-container"></div>
+                    <div id="a-magicBitsCodeContainer" class="hidden code-container"></div>
                     <div id="a-forLoopHeader" class="header-section">
                         <h3>method: for loop</h3>
                         <button id="a-show-code-btn" class="show-code-btn"
-                            onclick="toggleCode('a-magicBitsCodeContainer', 'a-magicBitsHeader', 'a-show-code-btn', 'a-resultMagicBits', forLoopCode)">
+                            onclick="toggleCode('a-forLoopCodeContainer', 'a-magicBitsHeader', 'a-show-code-btn', 'a-resultMagicBits', forLoopCode)">
                             show source code</button>
                     </div>
                     <div id="a-resultForLoop" class="resultForLoop"></div>
@@ -84,11 +84,11 @@
 
                 <!-- Magic Bits -->
                 <div class="output-section">
-                    <div id="a-magicBitsCodeContainer" class="hidden code-container"></div>
+                    <div id="a-forLoopCodeContainer" class="hidden code-container"></div>
                     <div id="a-magicBitsHeader" class="header-section">
                         <h3>method: magic bits</h3>
                         <button id="a-show-code-btn2" class="show-code-btn"
-                            onclick="toggleCode('a-forLoopCodeContainer', 'a-forLoopHeader','a-show-code-btn2','a-resultForLoop', magicBitsCode)">
+                            onclick="toggleCode('a-magicBitsCodeContainer', 'a-forLoopHeader','a-show-code-btn2','a-resultForLoop', 'magicBitsCode')">
                             show source code</button>
                     </div>
 
@@ -119,11 +119,11 @@
             <div class="output">
                 <!-- For-Loop -->
                 <div class="output-section">
-                    <div id="b-forLoopCodeContainer" class="hidden code-container"></div>
+                    <div id="b-magicBitsCodeContainer" class="hidden code-container"></div>
                     <div id="b-forLoopHeader" class="header-section">
                         <h3>method: for loop</h3>
                         <button id="b-show-code-btn" class="show-code-btn"
-                            onclick="toggleCode('b-magicBitsCodeContainer', 'b-magicBitsHeader', 'b-show-code-btn', 'b-resultMagicBits', forLoopCode)">
+                            onclick="toggleCode('b-forLoopCodeContainer', 'b-magicBitsHeader', 'b-show-code-btn', 'b-resultMagicBits', forLoopCode)">
                             show source code</button>
                     </div>
                     <div id="b-resultForLoop" class="resultForLoop"></div>
@@ -131,11 +131,11 @@
 
                 <!-- Magic Bits -->
                 <div class="output-section">
-                    <div id="b-magicBitsCodeContainer" class="hidden code-container"></div>
+                    <div id="b-forLoopCodeContainer" class="hidden code-container"></div>
                     <div id="b-magicBitsHeader" class="header-section">
                         <h3>method: magic bits</h3>
                         <button id="b-show-code-btn2" class="show-code-btn"
-                            onclick="toggleCode('b-forLoopCodeContainer', 'b-forLoopHeader','b-show-code-btn2','b-resultForLoop', magicBitsCode)">
+                            onclick="toggleCode('b-magicBitsCodeContainer', 'b-forLoopHeader','b-show-code-btn2','b-resultForLoop', 'magicBitsCode')">
                             show source code</button>
                     </div>
 
